--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "accepts": "^1.3.7",
+    "app-root-path": "^3.0.0",
     "array-flatten": "^1.1.1",
     "body-parser": "^1.19.0",
     "bytes": "^3.1.0",
@@ -38,6 +39,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.49.0",
     "mime-types": "^2.1.32",
+    "morgan": "^1.10.0",
     "ms": "^2.0.0",
     "mysql": "^2.18.1",
     "negotiator": "^0.6.2",
